fixed overflow issue in post comments

--- a/src/stylesheets/_instagram-post.scss
+++ b/src/stylesheets/_instagram-post.scss
@@ -69,7 +69,7 @@
       }
     }
     .comments {
-      overflow: scroll;
+      overflow: auto;
       height: 62.5%;
       border-bottom: 1px solid $border;
       .comment {
